--- a/public/Views/poll/index.html
+++ b/public/Views/poll/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="public/Views/global.css">
-    <link rel="stylesheet" href="public/Views/poll/style.css">
+    <link rel="stylesheet" href="/public/Views/global.css">
+    <link rel="stylesheet" href="/public/Views/poll/style.css">
     <script src="//unpkg.com/@feathersjs/client@^4.3.0/dist/feathers.js" defer></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js" defer></script>
-    <script type="text/javascript" src="public/Views/poll/script.js" defer></script>
+    <script type="text/javascript" src="/public/Views/poll/script.js" defer></script>
     <title>Villiprant - Poll</title>
 </head>
     <body>
