--- a/public/Views/poll/index.html
+++ b/public/Views/poll/index.html
@@ -13,12 +13,12 @@
 </head>
     <body>
         <main id="main" class="container">
-            <h1>Polls</h1>
-            <div class="header-vote">
-                <div class="total-vote bold">Total: 12</div>
+            <h1>Poll</h1>
+            <div id="header-vote">
+                <div id="total-vote" class="bold"></div>
             </div>
-            <div class="content-vote">
-                <div class="vote">
+            <div id="content-vote">
+                <!-- <div class="vote">
                     <div class="bar" style="width: 0%"></div>
                     <div class="label">Question1</div>
                     <span>0 (0%)</span>
@@ -37,7 +37,7 @@
                     <div class="bar" style="width: 100%"></div>
                     <div class="label">Question1</div>
                     <span>5 (100%)</span>
-                </div>
+                </div> -->
             </div>
         </main>
     </body>
