listen event 'uptdated'

--- a/public/Views/poll/index.html
+++ b/public/Views/poll/index.html
@@ -17,28 +17,7 @@
             <div id="header-vote">
                 <div id="total-vote" class="bold"></div>
             </div>
-            <div id="content-vote">
-                <!-- <div class="vote">
-                    <div class="bar" style="width: 0%"></div>
-                    <div class="label">Question1</div>
-                    <span>0 (0%)</span>
-                </div>
-                <div class="vote">
-                    <div class="bar" style="width: 30%"></div>
-                    <div class="label">Question1</div>
-                    <span>3 (30%)</span>
-                </div>
-                <div class="vote">
-                    <div class="bar" style="width: 60%"></div>
-                    <div class="label">Question1</div>
-                    <span>4 (60%)</span>
-                </div>
-                <div class="vote">
-                    <div class="bar" style="width: 100%"></div>
-                    <div class="label">Question1</div>
-                    <span>5 (100%)</span>
-                </div> -->
-            </div>
+            <div id="content-vote"></div>
         </main>
     </body>
 </html>
