--- a/public/Views/poll/index.html
+++ b/public/Views/poll/index.html
@@ -15,6 +15,7 @@
         <main id="main" class="container">
             <h1>Poll</h1>
             <div id="header-vote">
+                <div id="title"></div>
                 <div id="total-vote" class="bold"></div>
             </div>
             <div id="content-vote"></div>
