--- a/public/Views/poll/style.css
+++ b/public/Views/poll/style.css
@@ -19,6 +19,9 @@ body{
 #header-vote{
     padding: 0.5rem;
 }
+    #title{
+        font-size: 1.3em;
+    }
     #total-vote{
         display: flex;
         justify-content: flex-end;
@@ -34,6 +37,7 @@ body{
     .vote{
         color: white;
         width: 100%;
+        min-height: 6vh;
         background-color: var(--secondary-color);
         padding: 0.5rem 1rem;
         box-shadow: 0 1px 1px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -43,6 +47,10 @@ body{
         align-items: center;
         position: relative;
         overflow: hidden;
+        cursor: pointer;
+    }
+    .vote:hover{
+        box-shadow: 0 1px 1px 1px rgba(0,0,0,0.12), 0 1px 2px 1px rgba(0,0,0,0.24);
     }
     .vote + .vote{
         margin-top: 0.5rem;
@@ -57,4 +65,7 @@ body{
         top: 0;
         left: 0;
         transition: all 0.5s ease-in-out;
+    }
+    .label{
+        font-size: 1.1em;
     }
