--- a/public/Views/poll/index.html
+++ b/public/Views/poll/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/public/Views/poll/style.css">
     <script src="//unpkg.com/@feathersjs/client@^4.3.0/dist/feathers.js" defer></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js" defer></script>
-    <script type="text/javascript" src="/public/Views/poll/script.js" defer></script>
+    <script type="module" src="/public/Views/poll/script.js" defer></script>
     <title>Villiprant - Poll</title>
 </head>
     <body>
