--- a/public/Views/poll/style.css
+++ b/public/Views/poll/style.css
@@ -48,6 +48,7 @@ body{
         position: relative;
         overflow: hidden;
         cursor: pointer;
+        user-select: none;
     }
     .vote:hover{
         box-shadow: 0 1px 1px 1px rgba(0,0,0,0.12), 0 1px 2px 1px rgba(0,0,0,0.24);
