--- a/public/Views/poll/index.html
+++ b/public/Views/poll/index.html
@@ -12,7 +12,7 @@
     <title>Villiprant - Poll</title>
 </head>
     <body>
-        <main id="main" class="container">
+        <main class="container">
             <h1>Poll</h1>
             <div id="header-vote">
                 <div id="title"></div>
