--- a/public/Views/poll/index.html
+++ b/public/Views/poll/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/public/Views/global.css">
     <link rel="stylesheet" href="/public/Views/poll/style.css">
     <script src="//unpkg.com/@feathersjs/client@^4.3.0/dist/feathers.js" defer></script>
@@ -12,6 +13,10 @@
     <title>Villiprant - Poll</title>
 </head>
     <body>
+        <aside>
+            <span id="link-icon" class="material-icons">link</span>
+            <a href="" id="share-link">test</a>
+        </aside>
         <main class="container">
             <h1>Poll</h1>
             <div id="header-vote">
