--- a/public/Views/poll/style.css
+++ b/public/Views/poll/style.css
@@ -1,8 +1,30 @@
 body{
     display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
     height: 100vh;
 }
+
+aside{
+    padding: 1rem;
+    background-color: var(--secondary-bg-color);
+    margin-bottom: 1rem;
+    width: 80%;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    display: flex;
+    align-items: center;
+    font-size: 1.2rem;
+    color: white;
+}
+    #link-icon{
+        font-size: 2.5rem;
+        margin-right: 0.5rem;
+        user-select: none;
+    }
+    #share-link{
+
+    }
 
 main{
     display: flex;
@@ -10,7 +32,6 @@ main{
     width: 80%;
     max-height: 80%;
     min-height: 250px;
-    margin: auto;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     padding: 1rem;
     color: white;
