--- a/public/Views/poll/index.html
+++ b/public/Views/poll/index.html
@@ -13,9 +13,9 @@
     <title>Villiprant - Poll</title>
 </head>
     <body>
-        <aside>
+        <aside id="link-wrapper">
             <span id="link-icon" class="material-icons">link</span>
-            <a href="" id="share-link">test</a>
+            <a href="" id="share-link"></a>
         </aside>
         <main class="container">
             <h1>Poll</h1>
