--- a/public/Views/poll/style.css
+++ b/public/Views/poll/style.css
@@ -16,14 +16,22 @@ aside{
     align-items: center;
     font-size: 1.2rem;
     color: white;
+    position: relative;
+    overflow: hidden;
 }
     #link-icon{
         font-size: 2.5rem;
         margin-right: 0.5rem;
         user-select: none;
     }
-    #share-link{
-
+    .copied::after{
+        content: "Copied";
+        background-color: #8bc34a;
+        padding: 0.2rem 0.5rem;
+        position: absolute;
+        top: 0;
+        right: 0;
+        font-size: 0.8em;
     }
 
 main{
